# axum-todo

./: Cargo.toml  README.md
src/: errors.rs  handlers.rs  main.rs  models.rs  pg_database.rs  server.rs
src/errors/: app_error.rs  todo_error.rs
src/models/: pagination.rs  todo.rs  todo_repo.rs
