[package]
name    = "axum-todo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum           = "0.5.16"
tokio          = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"] }
serde          = { version = "1.0.145", features = ["derive"] }
serde_json     = "1.0.87"
uuid           = { version = "1.2.1", features = ["serde", "v4"] }
futures        = "0.3.25"
num_cpus       = "1.13.1"
hyper          = "0.14.20"

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
